# FFmpegApplication

./: README.md
app/: build.gradle
app/src/androidTest/java/com/aruba/ffmpegapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  _opensl_helper.cpp  _opensl_helper.h  native-lib.cpp
app/src/main/java/com/aruba/ffmpegapplication/: DecodeActivity.java  MainActivity.java  PcmPlayActivity.java  YuvPlayActivity.java  YuvPlayView.java
app/src/main/jniLibs/include/libavcodec/: vaapi.h
app/src/main/res/layout/: activity_decode.xml  activity_main.xml  activity_pcm_play.xml  activity_yuv_play.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/aruba/ffmpegapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
